sekcja powitalna (flex)

--- a/style.css
+++ b/style.css
@@ -28,3 +28,71 @@
     cursor: pointer;
     white-space: nowrap;
 }
+
+
+
+#page-content{
+    width: 100%;
+}
+
+#welcome-text{
+    margin-left: -10px;
+    margin-right: -10px;
+    background-image: url("tlo-upscaled.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+   flex-direction: column;
+}
+
+#welcome-title{
+    font-family: 'Jockey One';
+    font-size: 5vw;
+
+    color:white;
+}
+
+#welcome-subtitle{
+
+    font-family: 'Jockey One';
+    font-size: 2vw;
+    
+
+    color:white;
+}
+
+#about-us-title{
+    text-align: center;
+    font-family: 'Jockey One';
+    font-size: 70px;
+    top: 125%;
+    transform: translate(-50%, -50%);
+    color:black;
+}
+
+#about-us-content{
+    position: absolute;
+    color: black;
+    width: 500px;
+    height: 500px;
+    top: 140%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    font-family: Jost;
+    font-size: 24px;
+}
+
+.about-us::before{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.about-us::after{
+    content: "";
+    display: table;
+    clear: both;
+}
