--- a/style2.css
+++ b/style2.css
@@ -146,72 +146,41 @@
     flex-direction: column;
 }
 
-#sneaker-example{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 23vw;
-    height: 28vw;
-    margin-left: 2.5vw;
-    margin-right: 2.5vw;
-    margin-top: 1.25vw;
-    margin-bottom: 4vw;
-    -webkit-box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1);
-    -moz-box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1);
-    box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1); 
-}
-
 #sneaker-offer{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 19vw;
-    height: 21vw;
-    margin-left: 2.5vw;
+    height: 22vw;
+    margin-left: -0.5vw;
     margin-right: 2.5vw;
     margin-top: 1.25vw;
-    margin-bottom: 4vw;
+    /* margin-bottom: 4vw; */
     -webkit-box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1);
     -moz-box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1);
-    box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1); 
-}
-
-#sneaker-example-list{
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-content: center;
+    box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1);
 }
 
 #sneaker-offer-list{
     display: flex;
     list-style: none;
     justify-content: space-around;
+    margin-bottom: 5vw;
     align-content: center;
 }
 
-#sneaker-example-title{
+#sneaker-offer-title{
     font-family: 'Jockey One';
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     margin-bottom: -0.5vw;
     margin-top: -6vw;
     color:black;
 }
 
-
-#sneaker-offer-title{
-    font-family: 'Jockey One';
-    font-size: 1.2vw;
-    margin-bottom: -0.5vw;
-    margin-top: -8vw;
-    color:black;
-}
-
 #sneaker-offer-footer{
-    margin-top: -3vw;
-    margin-bottom: -9vw;
+    margin-top: -2vw;
+    margin-bottom: -5.5vw;
     display: flex;
     flex-direction: row;
 }
@@ -219,7 +188,7 @@
 #price-container{
     background-color: white;
     height: 3vw;
-    width: 8vw;
+    width: 7.5vw;
     padding-left: 1vw;
     margin-right: 1vw;
     -webkit-box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
@@ -229,54 +198,10 @@
 
 #price-tag{
     font-family: 'Jockey One';
-    font-size: 2.2vw;
+    font-size: 2.1vw;
     margin-top: 0;
     margin-right: 1vw;
     justify-content: end;
-}
-
-
-#example-sneaker-offer-title{
-    font-family: 'Jockey One';
-    font-size: 1.5vw;
-    margin-bottom: -0.5vw;
-    margin-top: -6vw;
-    color:black;
-}
-
-#example-sneaker-offer-footer{
-    margin-top: -2vw;
-    margin-bottom: -6vw;
-    display: flex;
-    flex-direction: row;
-}
-
-#example-price-container{
-    background-color: white;
-    height: 3.5vw;
-    width: 9vw;
-    padding-left: 1vw;
-    margin-right: 1vw;
-    -webkit-box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
-    -moz-box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
-    box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
-}
-
-#example-price-tag{
-    font-family: 'Jockey One';
-    font-size: 2.5vw;
-    margin-top: 0;
-    margin-right: 1vw;
-    justify-content: end;
-}
-
-#example-add-to-basket{
-    background-color: #000;
-    width: 3.5vw;
-    height: 3.5vw;
-    align-items: center;
-    justify-content: center;
-    display: flex;
 }
 
 #add-to-basket{
@@ -288,20 +213,9 @@
     display: flex;
 }
 
-
-#sneaker-example-preview{
-    width: 16vw;
-    height: 16vw;
-}
-
 #sneaker-preview{
-    width: 16vw;
-    height: 16vw;
-}
-
-#example-basket{
-    width: 2.5vw;
-    height: 2.5vw;
+    width: 17vw;
+    height: 17vw;
 }
 
 #basket{
@@ -362,4 +276,5 @@
     text-decoration: none;
     color: black;
     margin-top: -2vw;
+}
 }
