--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* NAGŁÓWEK */
 .tab-header {
     position: fixed;
     display: flex;
@@ -13,6 +14,7 @@
     color: #000!important;
     background-color: #fff!important;
 }
+
 .tab-item {
     padding: 18px 50px!important;
     width: auto;
@@ -33,26 +35,83 @@
     width: 100%;
 }
 
+
+body{
+    margin: 0;
+}
+
+/* STOPKA */
+
+#footer{
+    background-color: #233027;
+    height: 15vw;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.footer-title{
+    color: white;
+    font-family: 'Jockey One';
+    margin-bottom: 1vw;
+    font-size: 1.5vw;
+}
+
+.socials-element{
+    margin-top: -0.8vw;
+}
+
+.footer-content{
+    color: white;
+    font-family: 'Jost', sans-serif;
+    font-size: 1vw;
+    margin: 0.2vw;
+
+}
+
+.footer-icon{
+    width: 1vw;
+    height: 1vw;
+    color: white;
+}
+
+.socialmedia-href{
+    color: #fff;
+    font-family: 'Jost', sans-serif;
+    font-size: 1vw;
+    text-decoration: none;
+    margin-top: 50px;
+}
+
+#back-to-homepage{
+    font-family: 'Jockey One';
+    font-size: 1.4vw;
+    text-decoration: none;
+    color: black;
+    margin-top: -2vw;
+}
+
+/* STRONA GŁÓWNA */
+
 #welcome-text{
-   
     background-image: url("tlo-upscaled.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
-  
 }
 
 .title-container{
     display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 100vh;
-   flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
 }
 
 #welcome-title{
     font-family: 'Jockey One';
     font-size: 5vw;
-
     color:white;
 }
 
@@ -162,6 +221,14 @@
     box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1); 
 }
 
+
+#sneaker-example-list{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-content: center;
+}
+
 #sneaker-offer{
     display: flex;
     justify-content: center;
@@ -178,20 +245,6 @@
     box-shadow: 2px 2px 17px -5px rgba(0, 0, 0, 1); 
 }
 
-#sneaker-example-list{
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-content: center;
-}
-
-#sneaker-offer-list{
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-content: center;
-}
-
 #sneaker-example-title{
     font-family: 'Jockey One';
     font-size: 1.5vw;
@@ -200,6 +253,61 @@
     color:black;
 }
 
+#sneaker-example-offer-footer{
+    margin-top: 0vw;
+    margin-bottom: -6vw;
+    display: flex;
+    flex-direction: row;
+}
+
+#example-price-container{
+    background-color: white;
+    height: 3.5vw;
+    width: 9vw;
+    padding-left: 1vw;
+    margin-right: 1vw;
+    -webkit-box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
+    -moz-box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
+    box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
+}
+
+#sneaker-example-preview{
+    width: 18vw;
+    height: 18vw;
+}
+
+#example-basket{
+    width: 2.5vw;
+    height: 2.5vw;
+}
+
+#example-price-tag{
+    font-family: 'Jockey One';
+    font-size: 2.5vw;
+    margin-top: 0;
+    margin-right: 1vw;
+    justify-content: end;
+}
+
+#example-add-to-basket{
+    background-color: #000;
+    width: 3.5vw;
+    height: 3.5vw;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+
+
+/* SKLEP */
+
+#sneaker-offer-list{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-content: center;
+}
 
 #sneaker-offer-title{
     font-family: 'Jockey One';
@@ -236,40 +344,6 @@
 }
 
 
-#sneaker-example-offer-footer{
-    margin-top: 0vw;
-    margin-bottom: -6vw;
-    display: flex;
-    flex-direction: row;
-}
-
-#example-price-container{
-    background-color: white;
-    height: 3.5vw;
-    width: 9vw;
-    padding-left: 1vw;
-    margin-right: 1vw;
-    -webkit-box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
-    -moz-box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
-    box-shadow: 5px 5px 20px -4px rgba(66, 68, 90, 1);
-}
-
-#example-price-tag{
-    font-family: 'Jockey One';
-    font-size: 2.5vw;
-    margin-top: 0;
-    margin-right: 1vw;
-    justify-content: end;
-}
-
-#example-add-to-basket{
-    background-color: #000;
-    width: 3.5vw;
-    height: 3.5vw;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-}
 
 #add-to-basket{
     background-color: #000;
@@ -281,77 +355,19 @@
 }
 
 
-#sneaker-example-preview{
-    width: 18vw;
-    height: 18vw;
-}
-
 #sneaker-preview{
     width: 15vw;
     height: 15vw;
     margin-bottom: 1vw;
 }
 
-#example-basket{
-    width: 2.5vw;
-    height: 2.5vw;
-}
 
 #basket{
     width: 2vw;
     height: 2vw;
 }
 
-#footer{
-    background-color: #233027;
-    height: 15vw;
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.footer-title{
-    color: white;
-    font-family: 'Jockey One';
-    margin-bottom: 1vw;
-    font-size: 1.5vw;
-}
-
-.socials-element{
-    margin-top: -0.8vw;
-}
-
-.footer-content{
-    color: white;
-    font-family: 'Jost', sans-serif;
-    font-size: 1vw;
-    margin: 0.2vw;
-
-}
-
-.footer-icon{
-    width: 1vw;
-    height: 1vw;
-    color: white;
-}
-
-.socialmedia-href{
-    color: #fff;
-    font-family: 'Jost', sans-serif;
-    font-size: 1vw;
-    text-decoration: none;
-    margin-top: 50px;
-}
-
-#back-to-homepage{
-    font-family: 'Jockey One';
-    font-size: 1.4vw;
-    text-decoration: none;
-    color: black;
-    margin-top: -2vw;
-}
+/* KONTAKT */
 
 #contact-ui{
     display: flex;
@@ -373,11 +389,71 @@
 
 #contact-form-content{
     display: flex;
+    margin-left: 13vw;
+    gap: 5vw;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-body{
-    margin: 0;
+#contact-header{
+    display: flex;
+    margin-top: -7vw;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.form-inputs{
+    display: flex;
+    flex-direction: row;
+}
+
+.small-input{
+    width: 17vw;
+    height: 3vw;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 0.8vw;
+    margin-top: 0.8vw;
+    padding-left: 1vw;
+}
+
+.small-input:focus {outline:0;}
+
+#message{
+    width: 36vw;
+    height: 7vw;
+    margin-top: 0.8vw;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 0.8vw;
+    padding-left: 1vw;
+    padding-top: 1vw;
+    resize: none;
+}
+
+#message:focus {outline:0;}
+
+.styled-input{
+    background-color: rgba(99,115,129,0.06);
+    border-color: rgba(99,115,129,0.06);
+    border-width: 1px 1px 1px 1px;
+    border-radius: 0px 0px 0px 0px;
+
+}
+
+#submit{
+    width: 37.25vw;
+    height: 3vw;
+    margin-top: 0.8vw;
+    background-color: #252930;
+    color: white;
+    font-family: 'Jockey One';
+    font-size: 1vw;
+    resize: none;
+    border: none;
+    cursor: pointer;
+}
+
+#submit:hover{
+    outline: 0;
 }
